# dde-introduction

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  README.zh_CN.md  dde-introduction.desktop  dde-introduction.pro  dde-introduction.qrc  introduction.pro
.reuse/: dep5
.tx/: config
debian/: changelog  control  rules
misc/: org.deepin.dde.Appearance1.xml  org.deepin.dde.daemon.Dock1.xml
resources/: 15.7_en_US.ass  15.7_zh_CN.ass  15.8_zh_CN.ass
resources/desktop/: 15.8_en_US.ass  15.8_zh_CN.ass  en_US.ass  zh_CN.ass
resources/professional/: 15.5 SP2_en_US.ass  15.5 SP2_zh_CN.ass
src/: basemodulewidget.cc  basemodulewidget.cpp  basemodulewidget.h  dvideowidget.cpp  dvideowidget.h  main.cc  main.cpp  mainwindow.cc  mainwindow.cpp  mainwindow.h  model.cc  model.cpp  model.h  normalwindow.cc  normalwindow.cpp  normalwindow.h  worker.cc  worker.cpp  worker.h
src/modules/: about.cc  about.cpp  about.h  desktopmodemodule.cc  desktopmodemodule.cpp  desktopmodemodule.h  iconmodule.cc  iconmodule.cpp  iconmodule.h  moduleinterface.cc  moduleinterface.cpp  moduleinterface.h  normalmodule.cc  normalmodule.cpp  normalmodule.h  photoslide.cpp  photoslide.h  support.cc  support.cpp  support.h  videowidget.cc  videowidget.cpp  videowidget.h  wmmodemodule.cc  wmmodemodule.cpp  wmmodemodule.h
src/widgets/: basewidget.cc  basewidget.cpp  basewidget.h  borderwidget.cc  borderwidget.cpp  borderwidget.h  bottombutton.cpp  bottombutton.h  bottomnavigation.cc  bottomnavigation.cpp  bottomnavigation.h  closebutton.cpp  closebutton.h  coverphoto.cpp  coverphoto.h  iconbutton.cpp  iconbutton.h  navigationbar.cc  navigationbar.h  navigationbutton.cc  navigationbutton.cpp  navigationbutton.h  nextbutton.cpp  nextbutton.h  previousbutton.cpp  previousbutton.h
tests/: CMakeLists.txt  cmake-lcov-test.sh  test-prj-running.sh
tests/src/: main.cpp  ut_basemodulewidget.cpp  ut_basemodulewidget.h  ut_mainwindow.cpp  ut_mainwindow.h  ut_model.cpp  ut_model.h  ut_worker.cpp  ut_worker.h
translations/: dde-introduction.ts  dde-introduction_af.ts  dde-introduction_am_ET.ts  dde-introduction_ar.ts  dde-introduction_ast.ts  dde-introduction_az.ts  dde-introduction_bg.ts  dde-introduction_bn.ts  dde-introduction_ca.ts  dde-introduction_cs.ts  dde-introduction_da.ts  dde-introduction_de.ts  dde-introduction_el.ts  dde-introduction_en_AU.ts  dde-introduction_en_GB.ts  dde-introduction_en_US.ts  dde-introduction_eo.ts  dde-introduction_es.ts  dde-introduction_es_419.ts  dde-introduction_fa.ts  dde-introduction_fi.ts  dde-introduction_fil.ts  dde-introduction_fr.ts  dde-introduction_gl.ts  dde-introduction_gl_ES.ts  dde-introduction_he.ts  dde-introduction_hi_IN.ts  dde-introduction_hr.ts  dde-introduction_hu.ts  dde-introduction_hy.ts  dde-introduction_id.ts  dde-introduction_it.ts  dde-introduction_ja.ts  dde-introduction_kn_IN.ts  dde-introduction_ko.ts  dde-introduction_ku_IQ.ts  dde-introduction_lo.ts  dde-introduction_lt.ts  dde-introduction_ml.ts  dde-introduction_mn.ts  (+25 more)
(+59 files in other folders)
